src/test/deca/context/valid/cast_float_to_int.deca
// Contextual test, cast an int cast into a float

{
    float x = 5.0;
    int f = (int) (x);
}