src/test/deca/context/invalid/inst_return_in_main.deca
// Test of the rule (3.24): not possible to return in a main

{
    int x = 5;
    return x;
}



// Resultat:

//# TODO message error

